--- a/app/src/main/res/layout/activity_diary_page.xml
+++ b/app/src/main/res/layout/activity_diary_page.xml
@@ -19,7 +19,9 @@
         android:layout_weight="8"
         android:hint="Content"
         android:inputType="textMultiLine"
-        android:lines="10" />
+        android:lines="10"
+        android:gravity="start|top" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
