--- a/app/src/main/res/layout/activity_diary_page.xml
+++ b/app/src/main/res/layout/activity_diary_page.xml
@@ -22,7 +22,6 @@
         android:lines="10"
         android:gravity="start|top" />
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -30,13 +29,7 @@
         android:orientation="horizontal"
         android:gravity="center">
 
-        <Button
-            android:id="@+id/saveButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Save"
-            android:onClick="savePage"/>
-
+        <!-- Remove the save button -->
         <Button
             android:id="@+id/deleteButton"
             android:layout_width="wrap_content"
