--- a/app/src/main/res/layout/activity_diary_page.xml
+++ b/app/src/main/res/layout/activity_diary_page.xml
@@ -19,12 +19,12 @@
 
         <EditText
             android:id="@+id/editContent"
-            android:layout_width="match_parent"
+            android:layout_width="374dp"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:gravity="start|top"
             android:hint="Content"
-            android:inputType="textMultiLine"
-            android:gravity="start|top"/>
+            android:inputType="textMultiLine" />
 
         <Button
             android:id="@+id/deleteButton"
