--- a/app/src/main/res/layout/activity_diary_page.xml
+++ b/app/src/main/res/layout/activity_diary_page.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -10,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="56dp">  <!-- Ensures content is not blocked by the delete button -->
+        android:paddingBottom="56dp"> <!-- Ensures content is not blocked by the delete button -->
 
         <EditText
             android:id="@+id/editTitle"
@@ -32,14 +31,14 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
-        android:layout_height="118dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:contentDescription="Delete Page"
-        android:onClick="deletePage"
-        app:srcCompat="@android:drawable/ic_menu_delete" />
+        app:srcCompat="@android:drawable/ic_menu_delete"
+        android:onClick="deletePage" />
 
-    <!-- Bottom Toolbar (Fixed at the bottom) -->
+    <!-- Bottom Toolbar -->
     <LinearLayout
         android:id="@+id/bottomToolbar"
         android:layout_width="match_parent"
